--- a/index.html
+++ b/index.html
@@ -493,7 +493,7 @@
             <div class="footer-section">
                 <h3>Quick Links</h3>
                 <ul>
-                    <li><a href="index.html"><i class="fas fa-home"></i>Home</a></li>
+                    <li><a href="home.html"><i class="fas fa-home"></i>Home</a></li>
                     <li><a href="about.html"><i class="fas fa-info-circle"></i>About Us</a></li>
                     <li><a href="features.html"><i class="fas fa-star"></i>Features</a></li>
                     <li><a href="reviews.html"><i class="fas fa-comments"></i>Reviews</a></li>
@@ -504,8 +504,8 @@
                 <h3>Resources</h3>
                 <ul>
                     <li><a href="faq.html"><i class="fas fa-question-circle"></i>FAQ</a></li>
-                    <li><a href="#terms"><i class="fas fa-file-contract"></i>Terms of Service</a></li>
-                    <li><a href="#privacy"><i class="fas fa-shield-alt"></i>Privacy Policy</a></li>
+                    <li><a href="terms.html"><i class="fas fa-file-contract"></i>Terms of Service</a></li>
+                    <li><a href="privacy.html"><i class="fas fa-shield-alt"></i>Privacy Policy</a></li>
                     <li><a href="#support"><i class="fas fa-headset"></i>Support</a></li>
                 </ul>
             </div>
